--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playball&family=Tangerine:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Dosis:wght@200..800&family=Playball&family=Tangerine:wght@400;700&display=swap');
 body{
     margin: 0px;
     padding: 0px;
+}
+.container
+{
+    width: 100%;
+    height: auto;
+    border: 1px solid #006680;
+}
+
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 70px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 50px;
+    padding: 5px;
+    display: flex;
+    padding-left: 600px;
+}
+
+.body-container
+{
+    display: flex;
+}
+
+
+.left-container
+{
+    width: 500px;
+    height: 800px;
+    background-color: 	 #ebfafa;
+    padding-top: 100px;
+    display: flex;
+}
+.right-container
+{
+    width: 500px;
+    height: 800px;
+    background-color: 	 #ebfafa;
+    padding-top: 100px;
+    display: flex;
+    
+}
+.center-body{
+    
+    text-align: center;
+    width: 520px;
+    height: 800px;
+}
+h1
+{
+    color:#006680;
+    text-align: center;
+    font-family: Playball;
+    font-size: 40px;
+    text-shadow: 1.5px 1.5px black;
+}
+h2{
+    font-family :Tangerine;
+    font-size: 35px;
+    color: #00004d;
+}
+.footer
+{
+    background-color: #47d1d1;
+    height: 100px;
+    font-family: Dosis;
+    
+}
+.address{
+    margin-left: 100px;
+    margin-top: 5px;
+}
+.about-us{
+    margin-left: 300px;
+    margin-top: 5px;
 }
