--- a/css/story.css
+++ b/css/story.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
+body
+{
+    background-color: #e6ffff;
+}
 .container
 {
     width: 100%;
@@ -18,4 +23,77 @@
     padding: 5px;
     display: flex;
     padding-left: 600px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 30px;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 3px 3px 3px #ababab;
+}
+.cards-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+}
+.card{
+width: 300px;
+height: 400px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 20px;
+text-align: center;
+margin-left: 20px;
+font-family: Playball;
+border-radius: 10px;
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 160px;
+    width:150px;
+  
+}
+h3{
+   font-size: 20px;
+   color: #7700b3;
+}
+h4{
+     font-size: 17px;
+}
+h5{
+      font-size: 15px;
+      color: #cc0066;
+}
+h6{
+     font-size: 12px;
+     color: 	 #990066;
+}
+.btn{
+    width: 100px;
+    height: 30px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size: 20px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 15px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 32px;
+    width: 130px;
 }
