--- a/css/story.css
+++ b/css/story.css
@@ -40,6 +40,9 @@ body
     width: 100%;
     height: 100%;
     display: flex;
+    flex: wrap;
+    flex-direction: row;
+    justify-content: center;
 
 }
 .card{
@@ -53,6 +56,7 @@ text-align: center;
 margin-left: 20px;
 font-family: Playball;
 border-radius: 10px;
+
 }
 .card:hover
 {
@@ -62,6 +66,7 @@ border-radius: 10px;
 .card-img{
     height: 160px;
     width:150px;
+    margin-top: 10px;
   
 }
 h3{
