--- a/css/index.css
+++ b/css/index.css
@@ -96,3 +96,99 @@ h2{
     height: 28px;
     margin-left: 100px;
 }
+@media screen and (max-width:600px)
+{
+    .container
+{
+    width: 100%;
+    height: auto;
+    border: 1px solid #006680;
+}
+
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 40px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 25px;
+    padding: 2px;
+    display: flex;
+    padding-left: 200px;
+}
+
+.body-container
+{
+    display: flex;
+}
+.books{
+    width: 150px;
+}
+
+.left-container
+{
+    width: 200px;
+    height: 300px;
+    background-color: 	 #ebfafa;
+    padding-top: 50px;
+    display: flex;
+}
+.right-container
+{
+    width:200px;
+    height: 300px;
+    background-color: 	 #ebfafa;
+    padding-top: 50px;
+    display: flex;
+    
+}
+.center-body{
+    
+    text-align: center;
+    width: 200px;
+    height: 300px;
+}
+h1
+{
+    color:#006680;
+    text-align: center;
+    font-family: Playball;
+    font-size: 20px;
+    text-shadow: 1.5px 1.5px black;
+}
+h2{
+    font-family :Tangerine;
+    font-size: 24px;
+    color: #00004d;
+}
+.footer
+{
+    background-color: #47d1d1;
+    height: 200px;
+    font-family: Dosis;
+    font-size: 10px;
+    
+}
+.address{
+    margin-left: 50px;
+    margin-top: 1px;
+}
+.about-us{
+    margin-left: 50px;
+    margin-top: 1px;
+    
+}
+.social-media
+{
+    margin-left: 50px;
+
+}
+.icon{
+    width: 15x;
+    height: 14px;
+    margin-left: 50px;
+}
+}
