--- a/css/index.css
+++ b/css/index.css
@@ -192,3 +192,92 @@ h2{
     margin-left: 50px;
 }
 }
+@media screen  and (min-width: 601px)and (max-width: 1200px)
+{
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 50px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 40px;
+    padding: 4px;
+    display: flex;
+    padding-left: 400px;
+}
+.books{
+    width: 220px;
+}
+.body-container
+{
+    display: flex;
+}
+
+
+.left-container
+{
+    width: 350px;
+    height: 400px;
+    background-color: 	 #ebfafa;
+    padding-top: 100px;
+    display: flex;
+}
+.right-container
+{
+    width: 350px;
+    height: 400px;
+    background-color: 	 #ebfafa;
+    padding-top: 70px;
+    display: flex;
+    
+}
+.center-body{
+    
+    text-align: center;
+    width: 350px;
+    height: 400px;
+}
+h1
+{
+    color:#006680;
+    text-align: center;
+    font-family: Playball;
+    font-size: 35px;
+    text-shadow: 1.5px 1.5px black;
+}
+h2{
+    font-family :Tangerine;
+    font-size: 30px;
+    color: #00004d;
+}
+.footer
+{
+    background-color: #47d1d1;
+    height: 300px;
+    font-family: Dosis;
+    font-size: 15px;
+    
+}
+.address{
+    margin-left: 70px;
+    margin-top: 1px;
+}
+.about-us{
+    margin-left: 70px;
+    margin-top: 1px;
+    
+}
+.social-media
+{
+    margin-left: 70px;
+
+}
+.icon{
+    width: 25px;
+    height: 20px;
+    margin-left: 70px;
+}
+}
