--- a/css/index.css
+++ b/css/index.css
@@ -281,3 +281,90 @@ h2{
     margin-left: 70px;
 }
 }
+@media screen and (min-width: 1200px)
+{   
+    .book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 70px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 50px;
+    padding: 5px;
+    display: flex;
+    padding-left: 600px;
+}
+
+.body-container
+{
+    display: flex;
+}
+
+
+.left-container
+{
+    width: 500px;
+    height: 800px;
+    background-color: 	 #ebfafa;
+    padding-top: 100px;
+    display: flex;
+}
+.right-container
+{
+    width: 500px;
+    height: 800px;
+    background-color: 	 #ebfafa;
+    padding-top: 100px;
+    display: flex;
+    
+}
+.center-body{
+    
+    text-align: center;
+    width: 520px;
+    height: 800px;
+}
+h1
+{
+    color:#006680;
+    text-align: center;
+    font-family: Playball;
+    font-size: 40px;
+    text-shadow: 1.5px 1.5px black;
+}
+h2{
+    font-family :Tangerine;
+    font-size: 35px;
+    color: #00004d;
+}
+.footer
+{
+    background-color: #47d1d1;
+    height: 400px;
+    font-family: Dosis;
+    font-size: 20px;
+    
+}
+.address{
+    margin-left: 100px;
+    margin-top: 1px;
+}
+.about-us{
+    margin-left: 100px;
+    margin-top: 1px;
+    
+}
+.social-media
+{
+    margin-left: 100px;
+
+}
+.icon{
+    width: 30px;
+    height: 28px;
+    margin-left: 100px;
+}
+}
