--- a/css/story.css
+++ b/css/story.css
@@ -5,7 +5,7 @@ body
 }
 .container
 {
-    width: 100%;
+    width: 1530px;
     height: auto;
     border: 1px solid #006680;
 }
@@ -101,4 +101,105 @@ h6{
 {
     height: 32px;
     width: 130px;
+}
+@media screen and (max-width:600px)
+ {
+    .container
+{
+    width:600px;
+    height: auto;
+    border: 1px solid #006680;
+    display: flex;
+}
+    .book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 35px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 25px;
+    padding: 2px;
+    width: 600px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 15px;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 1px 1px 1px #ababab;
+}
+.cards-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+width: 200px;
+height: 250px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 10px;
+text-align: center;
+margin-left: 10px;
+font-family: Playball;
+border-radius: 5px;
+
+
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 80px;
+    width:70px;
+    margin-top: 5px;
+  
+}
+h3{
+   font-size: 10px;
+   color: #7700b3;
+}
+h4{
+     font-size: 8px;
+}
+h5{
+      font-size: 8px;
+      color: #cc0066;
+}
+h6{
+     font-size:6px;
+     color: 	 #990066;
+}
+.btn{
+    width: 50px;
+    height: 15px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size: 10px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 8px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 16px;
+    width: 70px;
+}
+
 }
