--- a/css/story.css
+++ b/css/story.css
@@ -203,3 +203,105 @@ h6{
 }
 
 }
+@media screen and (min-width:601px) and (max-width:1200px)
+{
+    .container
+{
+    width: 1530px;
+    height: auto;
+    border: 1px solid #006680;
+}
+
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 50px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 40px;
+    padding: 4px;
+    display: flex;
+    padding-left: 400px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 25px;
+    font-size: 25px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 4px 4px 4px #ababab;
+}
+.cards-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: wrap;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+.card{
+width: 250px;
+height: 400px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 15px;
+text-align: center;
+margin-left: 15px;
+font-family: Playball;
+border-radius: 7px;
+
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 120px;
+    width:130px;
+    margin-top: 7px;
+  
+}
+h3{
+   font-size: 15px;
+   color: #7700b3;
+}
+h4{
+     font-size: 14px;
+}
+h5{
+      font-size: 15px;
+      color: #cc0066;
+}
+h6{
+     font-size: 10px;
+     color: 	 #990066;
+}
+.btn{
+    width: 80px;
+    height: 20px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size:15px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 14px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 17px;
+    width: 90px;
+}
+}
