--- a/css/poem.css
+++ b/css/poem.css
@@ -102,3 +102,308 @@ h6{
     height: 32px;
     width: 130px;
 }
+@media screen and (max-width:600px)
+ {
+    .container
+{
+    width:600px;
+    height: auto;
+    border: 1px solid #006680;
+    display: flex;
+}
+    .book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 35px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 25px;
+    padding: 2px;
+    width: 600px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 15px;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 1px 1px 1px #ababab;
+}
+.cards-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+width: 200px;
+height: 250px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 10px;
+text-align: center;
+margin-left: 10px;
+font-family: Playball;
+border-radius: 5px;
+
+
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 80px;
+    width:70px;
+    margin-top: 5px;
+  
+}
+h3{
+   font-size: 10px;
+   color: #7700b3;
+}
+h4{
+     font-size: 8px;
+}
+h5{
+      font-size: 8px;
+      color: #cc0066;
+}
+h6{
+     font-size:6px;
+     color: 	 #990066;
+}
+.btn{
+    width: 50px;
+    height: 15px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size: 10px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 8px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 16px;
+    width: 70px;
+}
+
+}
+@media screen and (min-width:601px) and (max-width:1200px)
+{
+    .container
+{
+    width: 1530px;
+    height: auto;
+    border: 1px solid #006680;
+}
+
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 50px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 40px;
+    padding: 4px;
+    display: flex;
+    padding-left: 400px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 25px;
+    font-size: 25px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 4px 4px 4px #ababab;
+}
+.cards-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: wrap;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+.card{
+width: 250px;
+height: 400px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 15px;
+text-align: center;
+margin-left: 15px;
+font-family: Playball;
+border-radius: 7px;
+
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 120px;
+    width:130px;
+    margin-top: 7px;
+  
+}
+h3{
+   font-size: 15px;
+   color: #7700b3;
+}
+h4{
+     font-size: 14px;
+}
+h5{
+      font-size: 15px;
+      color: #cc0066;
+}
+h6{
+     font-size: 10px;
+     color: 	 #990066;
+}
+.btn{
+    width: 80px;
+    height: 20px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size:15px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 14px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 17px;
+    width: 90px;
+}
+}
+@media screen and (min-width:1200px)
+{
+    .container
+{
+    width: 1530px;
+    height: auto;
+    border: 1px solid #006680;
+}
+
+.book-store-name
+{
+    background-color: 	 #47d1d1;
+    color: #006680;
+    height: 70px;
+    font-family: Playball;
+    text-shadow: 1.5px 1.5px black;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 50px;
+    padding: 5px;
+    display: flex;
+    padding-left: 600px;
+}
+.heading
+{
+    text-align: center;
+    background-color:  #ffccff;
+    color:#b300b3;
+    margin-top: 30px;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 3px 3px 3px #ababab;
+}
+.cards-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: wrap;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.card{
+width: 300px;
+height: 450px;
+border: 0.7px paleturquoise solid;
+background-color: white;
+box-shadow: 0px 0px 5px  black;
+margin-top: 20px;
+text-align: center;
+margin-left: 20px;
+font-family: Playball;
+border-radius: 10px;
+
+}
+.card:hover
+{
+    box-shadow: 1px 1px 10px black;
+  
+}
+.card-img{
+    height: 160px;
+    width:150px;
+    margin-top: 10px;
+  
+}
+h3{
+   font-size: 20px;
+   color: #7700b3;
+}
+h4{
+     font-size: 17px;
+}
+h5{
+      font-size: 15px;
+      color: #cc0066;
+}
+h6{
+     font-size: 12px;
+     color: 	 #990066;
+}
+.btn{
+    width: 100px;
+    height: 30px;
+    color: #004d66;
+    background-color: #e6f9ff;
+    font-size: 20px;
+    font-family: Playball;
+    font-weight: bolder;
+    padding: 1px 1px 1px 1px;
+    border-radius: 15px;
+    position: static;
+
+}
+.btn:hover
+{
+    height: 32px;
+    width: 130px;
+}
+}
